--- a/assets/templates/home-methodology.tmpl
+++ b/assets/templates/home-methodology.tmpl
@@ -1,97 +1,52 @@
 {{ $lang := .Language }}
 <div class="ons-container search__container">
   <div class="ons-grid">
-    <!-- <h3>Terrrrr</h3> -->
     <div class="ons-grid__col ons-col-12@m">
       <section class="search__summary">
         <span class="search__summary__generic">
-        {{ localise "HomeMethodology" $lang 1 }}
+          {{ localise "HomeMethodology" $lang 1 }}
         </span>
       </section>
-     
-      <!-- {{ template "partials/standalone-search" . }} -->
-      <!-- {{ template "partials/standalone-search" . }} -->
     </div>
-
-    
-    {{if .Data.ErrorMessage}}
-
-      <!-- <div class="ons-grid__col ons-col-12@m">
-        <section class="search__summary">
-          <span class="search__summary__generic">{{ localise "EnterSearchTerm" $lang 1 }}</span>
-        </section>
-        {{ template "partials/standalone-search" . }}
-      </div> -->
-
-    {{else if eq .Data.Response.Count 0}}
-      <div class="ons-grid__col ons-col-12@m">
-        <section class="search__summary" role="contentinfo" aria-label="Search summary">
-          {{ template "partials/summary" . }}
-        </section>
-      </div>
-
-      <div class="ons-grid__col ons-col-12@m">
-        {{ template "partials/standalone-search" . }}
-      </div>
-
-    {{else}}
-
-      <!-- <div class="ons-grid__col ons-col-12@m">
-        <section class="search__summary" role="contentinfo" aria-label="Search summary">
-          {{ template "partials/summary" . }}
-        </section>
-      </div> -->
-
-      <div class="ons-grid__col ons-col-4@m">
-        <section class="search__filter" role="contentinfo" aria-label="Search filtering" id="search-filter">
-          <div class="search__filter__heading">
-            <h3 class="font-size--18">
-              {{ localise "Filter" $lang 4 }} {{ localise .Data.TermLocalKey $lang 4 }}
-            </h3>
-            <a href="?{{ if .Data.Query }}q={{ .Data.Query}}{{end}}" id="clear-search" class="float-right font-size--18">{{ localise "ClearAll" $lang 1 }}</a>
-          </div>
-         
-          <div class="search__filter__content">
-            {{ template "partials/data-aggregation-filters" . }}
-          </div>
-          <div class="search__filter__content">
-            {{ template "partials/archived-release-message" . }}
-          </div>
-        </section>
-      </div>
-
-      <div class="ons-grid__col ons-col-8@m">
-        <section role="contentinfo" aria-label="Search results">
-          <div class="search__count">
-            {{ template "partials/count" . }}
-          </div>
-          <div class="search__sort">
-            {{ template "partials/sort" . }}
-          </div>
-          <div class="search__filter__mobile-filter-toggle hide">
-              <button id="filter-results" type="button" class="ons-btn ons-btn--secondary" aria-controls="search-filter">
-                <span class="ons-btn__inner">Filter results</span>
-              </button>
-          </div>
-          <div class="search__results">
-            {{ template "partials/data-aggregation-results" . }}
-          </div>
+    <div class="ons-grid__col ons-col-4@m">
+      <section class="search__filter" role="contentinfo" aria-label="{{ localise "SearchFiltering" $lang 4 }}" id="search-filter">
+        <div class="search__filter__heading">
+          <h3 class="font-size--18">
+            {{ localise "Filter" $lang 4 }} {{ localise .Data.TermLocalKey $lang 4 }}
+          </h3>
+          <a href="?{{ if .Data.Query }}q={{ .Data.Query}}{{end}}" id="clear-search" class="float-right font-size--18">{{ localise "ClearAll" $lang 1 }}</a>
+        </div>
+        
+        <div class="search__filter__content">
+          {{ template "partials/data-aggregation-filters" . }}
+        </div>
+        <div class="search__filter__content">
+          {{ template "partials/archived-release-message" . }}
+        </div>
+      </section>
+    </div>
+    <div class="ons-grid__col ons-col-8@m">
+      <section role="contentinfo" aria-label="{{ localise "SearchResults" $lang  1 }}">
+        <div class="search__count">
+          {{ template "partials/count" . }}
+        </div>
+        <div class="search__sort">
+          {{ template "partials/sort" . }}
+        </div>
+        <div class="search__filter__mobile-filter-toggle hide">
+            <button id="filter-results" type="button" class="ons-btn ons-btn--secondary" aria-controls="search-filter">
+              <span class="ons-btn__inner">{{ localise "FilterResults" $lang 4 }}</span>
+            </button>
+        </div>
+        <div class="search__results">
+          {{ template "partials/data-aggregation-results" . }}
+        </div>
+        {{if ne .Data.Response.Count 0}}
           <div class="search__pagination">
             {{ template "partials/search-pagination" . }}
           </div>
-        </section>
-      </div>
-    {{end}}
-
-    <div class="ons-grid__col ons-col-4@m">
-         
-         <div class="search__filter__content">
-            {{ template "partials/data-aggregation-filters" . }}
-          </div>
-          <div class="search__filter__content">
-            {{ template "partials/archived-release-message" . }}
-          </div>
+        {{end}}
+      </section>
     </div>
-
   </div>
 </div>
