--- a/assets/templates/partials/data-aggregation-results.tmpl
+++ b/assets/templates/partials/data-aggregation-results.tmpl
@@ -19,12 +19,13 @@
     <div id="results-zero" class="hide">
         <h3>{{ localise "NoResultsHeader" $lang 1 }}</h3>
         <p>{{ localise "NoResultsSelectAnother" $lang 1 }} {{ localise "Or" $lang 1 }} <a href="?{{ if .Data.Query }}q={{ .Data.Query}}{{end}}" id="clear-search-zero">{{ localise "ClearAllFilters" $lang 1 }}</a>.</p>
-        <p>{{ localise "NoResultsBody" $lang 1 | safeHTML}}</p>
     </div>
     <ul class="flush--padding">
         {{if $enabledTimeSeriesExport }}
-            <input id="select-all-time-series" type="checkbox" class="js-timeseriestool-select" name="" value="" aria-label="select time series">
-            <label for="select-all-time-series">{{ localise "SelectAll" $lang 1 }}</label>
+            {{if ne .Data.Response.Count 0}}
+                <input id="select-all-time-series" type="checkbox" class="js-timeseriestool-select ons-checkbox__input ons-js-checkbox" name="" value="" aria-label="select time series">
+                <label for="select-all-time-series">{{ localise "SelectAll" $lang 1 }}</label>
+            {{end}}
         {{end}}
         {{ range $i, $item := $response.Items }}
             {{ $currentPosition := add $i 1 }}
