--- a/assets/templates/partials/results.tmpl
+++ b/assets/templates/partials/results.tmpl
@@ -9,7 +9,7 @@
     <div id="results-loading" class="ons-panel ons-panel--info ons-panel--no-title hide">
         <span class="ons-u-vh">{{ localise "ImportantInformation" $lang 1 }}</span>
         <div class="ons-panel__body">
-        <p data-error-message="The results failed to load, please refresh.">
+        <p data-error-message="{{ localise "ResultsFailedToLoad" $lang 1 }}">
             {{ localise "LoadingResults" $lang 1 }}
         </p>
         </div>
