removes inline/in-template styles
Signed-off-by: lindenmckenzie <linden.mckenzie@ons.gov.uk>

--- a/assets/templates/home-datalist.tmpl
+++ b/assets/templates/home-datalist.tmpl
@@ -39,8 +39,8 @@
             </button>
         </div>
         <div class="border-bottom">
-          <a style="text-decoration: none; color: initial;"  href="/timeseriestool" class="ml-1">
-            <div class="box__content background--iron-light padding-right-sm--1 padding-right-md--1 padding-bottom-md--0  padding-left-sm--1 padding-left-md--1 js-hover-click" style="position: relative;">
+          <a href="/timeseriestool" class="col--md-offset-1 ons-u-td-no color-initial">
+            <div class="box__content background--iron-light padding-right-sm--1 padding-right-md--1 padding-bottom-md--0  padding-left-sm--1 padding-left-md--1 js-hover-click">
               <span class="float-right margin-top-md--2 margin-top-sm--2">
                 {{ template "icons/chevron-right" }}
               </span>
@@ -63,13 +63,3 @@
     </div>
   </div>
 </div>
-
-<style>
-  .d-flex { 
-    display: flex;
-  }
-
-  .ml-1 {
-    margin-left: 1rem;
-  }
-</style>
