--- a/assets/templates/partials/data-aggregation-filters.tmpl
+++ b/assets/templates/partials/data-aggregation-filters.tmpl
@@ -1,79 +1,17 @@
-{{ $lang := .Language }}
 {{ $enabledFilters := .Data.EnabledFilters }}
 {{ $dateFilterEnabled := .Data.DateFilterEnabled }}
 {{ $filters := .Data.Filters }}
 {{ $topicFilters := .Data.TopicFilters }}
-{{ $query := .Data.Query }}
-{{ $sort := .Data.Sort.Query }}
+{{ $lang := $.Language }}
 
 <div id="accordion" class="ons-accordion">
-    {{ range $index, $enabledFilter := $enabledFilters }}
+    {{ range $enabledFilter := $enabledFilters }}
     {{if eq $enabledFilter "keywords" }}
-    <details class="ons-collapsible ons-js-collapsible ons-collapsible--accordion" data-group="accordion" data-btn-close="Hide this" data-open="true">
-        <summary class="ons-collapsible__heading ons-js-collapsible-heading">
-            <h2 class="ons-collapsible__title">
-                <legend class="block">
-                    {{ localise "Search" $lang 1 }}
-                </legend>
-            </h2>
-            <span class="ons-collapsible__icon">
-                {{ template "icons/chevron-right" }}
-            </span>
-        </summary>
-        <fieldset class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
-                <div class="tiles__item tiles__item--nav-type flush-col hide--sm print--hide">
-                    <div class="tiles__content tiles__content--nav content-type-filter">
-                        <label class="ons-label ons-u-pb-xs ons-u-fw-n" for="keywords">{{ localise "SearchKeywords" $lang 1 }}</label>
-                        <div class="ons-compact-search">
-                            <input
-                            type="search"
-                            autocomplete="off"
-                            class="ons-compact-search__input js-auto-submit__input"
-                            id="keywords"
-                            name="q"
-                            value="">
-                        </div>
-                        
-                    </div>
-                </div>
-        </fieldset>
-        <noscript>
-            <button type="submit"
-                    class="ons-btn ons-btn--primary margin-top-sm--2 margin-top-md--2 js-submit-button">
-                    <span class="ons-btn__inner"><span class="ons-btn__text"> {{ localise "Filter" $lang 4 }}</span></span>
-            </button>
-        </noscript>
-    </details>
+        {{ template "partials/data-filters/keywords-filter" $lang }}
     {{end}}
 
     {{if eq $enabledFilter "previous-releases"}} 
-    <details class="ons-collapsible ons-js-collapsible ons-collapsible--accordion" data-group="accordion" data-btn-close="Hide this" data-open="true">
-        <summary class="ons-collapsible__heading ons-js-collapsible-heading">
-            <h2 class="ons-collapsible__title">
-                <legend class="block">
-                    {{ localise "PreviousReleases" $lang 1 }}
-                </legend>
-            </h2>
-            <span class="ons-collapsible__icon">
-                {{ template "icons/chevron-right" }}
-            </span>
-        </summary>
-        <fieldset class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
-            <legend class="filters__title">
-                <strong>
-                    {{ localise "PreviousReleases" $lang 1 }}
-                </strong>
-            </legend>
-            <div class="js-checkbox-container">
-                <div class="filters__field">
-                    <input type="checkbox" id="all-releases" name="allReleases" value="1">
-                    <label for="all-releases">
-                        {{ localise "ShowAllReleases" $lang 1 }}
-                    </label>
-                </div>
-            </div>
-        </fieldset>
-    </details>
+        {{ template "partials/data-filters/previous-releases" $lang }}
     {{end}}
 
     {{if eq $enabledFilter "topic-filter" }} 
@@ -214,94 +152,11 @@
         {{ end }}
     {{ end }}
     {{if eq $enabledFilter "updated"}} 
-    <details class="ons-collapsible ons-js-collapsible ons-collapsible--accordion" data-group="accordion" data-btn-close="Hide this" data-open="true">
-        <summary class="ons-collapsible__heading ons-js-collapsible-heading">
-            <h2 class="ons-collapsible__title">
-                <legend class="block">
-                    {{ localise "LastUpdate" $lang 1 }}
-                </legend>
-            </h2>
-            <span class="ons-collapsible__icon">
-                {{ template "icons/chevron-right" }}
-            </span>
-        </summary>
-        <fieldset class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
-            <div class="tiles__item tiles__item--nav-type flush-col hide--sm print--hide">
-                <div class="tiles__content tiles__content--nav">
-                    <label class="hidden" for="select-wide">
-                        {{ localise "Updated" $lang 4 }}
-                    </label>
-                    <select id="lastUpdatedSelect" name="select" class="ons-input ons-input--select ons-input--block updated-select">
-                        <option value="select" selected>{{ localise "SelectLastUpdated" $lang 1 }}</option>
-                        <option value="today">{{ localise "Today" $lang 1 }}</option>
-                        <option value="week">{{ localise "LastSevenDays" $lang 1 }}</option>
-                        <option value="month">{{ localise "LastMonth" $lang 1 }}</option>
-                        <option value="custom">{{ localise "Custom" $lang 1 }}</option>
-                    </select>
-                </div>
-            </div>
-        </fieldset>
-    </details>
+        {{ template "partials/data-filters/updated-filter" $lang }}
     {{ end }} 
 {{ end }}
 {{ if $dateFilterEnabled }}
-    <details class="ons-collapsible ons-js-collapsible ons-collapsible--accordion" data-group="accordion" data-btn-close="Hide this" data-open="true">
-        <summary class="ons-collapsible__heading ons-js-collapsible-heading">
-            <h2 class="ons-collapsible__title">
-                <legend class="block">
-                    {{ localise "Dates" $lang 1 }}
-                </legend>
-            </h2>
-            <span class="ons-collapsible__icon">
-                {{ template "icons/chevron-right" }}
-            </span>
-        </summary>
-        <fieldset class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
-            <legend class="ons-fieldset__legend">
-                {{ localise "ReleasedAfter" $lang 1 }}
-            </legend>
-            <div class="inputs-released-after tiles__item tiles__item--nav-type flush-col hide--sm print--hide">
-                    <p class="ons-panel__error hidden inputs-released-after-error">
-                        <strong class="inputs-released-after-error-text"></strong>
-                    </p>
-                    <div class="tiles__content tiles__content--nav ons-grid__col ons-col-3@m flush--padding from-date-filters">
-                        <label for="fromDateDay">{{ localise "Day" $lang 1 }}</label>
-                        <input type="text" id="fromDateDay" class="ons-input ons-input--text ons-input-type__input ons-input-number--w-2 js-auto-submit__input" name="fromDateDay" min="1" max="31" maxlength="2" pattern="[0-9]*" inputmode="numeric" value="">
-                    </div>
-                    <div class="tiles__content tiles__content--nav ons-grid__col ons-col-3@m flush--padding from-date-filters">
-                        <label for="fromDateMonth">{{ localise "Month" $lang 1 }}</label>
-                        <input type="text" id="fromDateMonth" class="ons-input ons-input--text ons-input-type__input ons-input-number--w-2 js-auto-submit__input" name="fromDateMonth" min="1" max="12" maxlength="2" pattern="[0-9]*" inputmode="numeric" value="">
-                    </div>
-                    <div class="tiles__content tiles__content--nav ons-grid__col ons-col-3@m flush--padding from-date-filters">
-                        <label for="fromDateYear">{{ localise "Year" $lang 1 }}</label>
-                        <input type="number" autocomplete="off" name="fromDateYear" id="fromDateYear" value="" class="ons-input ons-input--text ons-input-type__input ons-input-number--w-4" min="1900" max="2050" maxlength="4" pattern="[0-9]*">
-                    </div>
-            </div>
-        </fieldset>
-
-        <fieldset class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
-            <legend class="ons-fieldset__legend">
-                {{ localise "ReleasedBefore" $lang 1 }}
-            </legend>
-            <div class="inputs-released-before tiles__item tiles__item--nav-type flush-col hide--sm print--hide">
-                <p class="ons-panel__error hidden inputs-released-before-error">
-                    <strong class="inputs-released-before-error-text"></strong>
-                </p>
-                <div class="tiles__content tiles__content--nav ons-grid__col ons-col-3@m flush--padding to-date-filters">
-                    <label for="toDateDay">{{ localise "Day" $lang 1 }}</label>
-                    <input type="number" autocomplete="off" name="toDateDay" id="toDateDay" value="" class="ons-input ons-input--text ons-input-type__input ons-input-number--w-2" min="0" max="31" pattern="[0-9]*">
-                </div>
-                <div class="tiles__content tiles__content--nav ons-grid__col ons-col-3@m flush--padding to-date-filters">
-                    <label for="toDateMonth">{{ localise "Month" $lang 1 }}</label>
-                    <input type="number" autocomplete="off" name="toDateMonth" id="toDateMonth" value="" class="ons-input ons-input--text ons-input-type__input ons-input-number--w-2" min="1" max="12" maxlength="2" pattern="[0-9]*">
-                </div>
-                <div class="tiles__content tiles__content--nav ons-grid__col ons-col-3@m flush--padding to-date-filters">
-                    <label for="toDateYear">{{ localise "Year" $lang 1 }}</label>
-                    <input type="number" autocomplete="off" name="toDateYear" id="toDateYear" value="" class="ons-input ons-input--text ons-input-type__input ons-input-number--w-4" min="1900" max="2050" maxlength="4" pattern="[0-9]*">
-                </div>
-            </div>
-        </fieldset>
-    </details>
+    {{ template "partials/data-filters/date-filter" . }}
 {{ else }}
 <!-- Adds hidden date filter to be shown programatically in timeseries explorer -->
 <details id="dateFilters" class="hidden ons-collapsible ons-js-collapsible ons-collapsible--accordion" data-group="accordion" data-btn-close="Hide this" data-open="true">
